// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`preflight stories renders PreflightDevices AllDevices without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-owlgau"
    >
      <div
        style="width: 640px;"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-pvdni0"
          style="grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-iyng0n"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Microphone: MacBook Pro Microphone"
              class="rcx-box rcx-box--full rcx-button--small rcx-button rcx-css-1avkjfy"
              id="react-aria-_r_0_"
              title="MacBook Pro Microphone"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-mic rcx-icon rcx-css-18jrq41"
                >
                  
                </i>
                <div
                  class="rcx-box rcx-box--full rcx-css-99nwg2"
                >
                  MacBook Pro Microphone
                </div>
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-18jrq41"
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-css-iyng0n"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Speaker: MacBook Pro Speakers"
              class="rcx-box rcx-box--full rcx-button--small rcx-button rcx-css-1avkjfy"
              id="react-aria-_r_2_"
              title="MacBook Pro Speakers"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-volume rcx-icon rcx-css-18jrq41"
                >
                  ⟦
                </i>
                <div
                  class="rcx-box rcx-box--full rcx-css-99nwg2"
                >
                  MacBook Pro Speakers
                </div>
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-18jrq41"
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-css-iyng0n"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Camera: FaceTime HD Camera"
              class="rcx-box rcx-box--full rcx-button--small rcx-button rcx-css-1avkjfy"
              id="react-aria-_r_4_"
              title="FaceTime HD Camera"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-18jrq41"
                >
                  ❲
                </i>
                <div
                  class="rcx-box rcx-box--full rcx-css-99nwg2"
                >
                  FaceTime HD Camera
                </div>
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-18jrq41"
                >
                  
                </i>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`preflight stories renders PreflightDevices CameraMenuOpen without crashing 1`] = `
<body>
  <div
    aria-hidden="true"
  >
    <div
      class="rcx-box rcx-box--full rcx-css-owlgau"
    >
      <div
        style="width: 640px;"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-pvdni0"
          style="grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-iyng0n"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Microphone: MacBook Pro Microphone"
              class="rcx-box rcx-box--full rcx-button--small rcx-button rcx-css-1avkjfy"
              id="react-aria-_r_6_"
              title="MacBook Pro Microphone"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-mic rcx-icon rcx-css-18jrq41"
                >
                  
                </i>
                <div
                  class="rcx-box rcx-box--full rcx-css-99nwg2"
                >
                  MacBook Pro Microphone
                </div>
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-18jrq41"
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-css-iyng0n"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Speaker: MacBook Pro Speakers"
              class="rcx-box rcx-box--full rcx-button--small rcx-button rcx-css-1avkjfy"
              id="react-aria-_r_8_"
              title="MacBook Pro Speakers"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-volume rcx-icon rcx-css-18jrq41"
                >
                  ⟦
                </i>
                <div
                  class="rcx-box rcx-box--full rcx-css-99nwg2"
                >
                  MacBook Pro Speakers
                </div>
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-18jrq41"
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-css-iyng0n"
          >
            <button
              aria-controls="react-aria-_r_b_"
              aria-expanded="true"
              aria-haspopup="true"
              aria-label="Camera: FaceTime HD Camera"
              class="rcx-box rcx-box--full rcx-button--small rcx-button rcx-css-1avkjfy"
              id="react-aria-_r_a_"
              title="FaceTime HD Camera"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-18jrq41"
                >
                  ❲
                </i>
                <div
                  class="rcx-box rcx-box--full rcx-css-99nwg2"
                >
                  FaceTime HD Camera
                </div>
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-chevron-up rcx-icon rcx-css-18jrq41"
                >
                  
                </i>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    data-focus-scope-start="true"
    hidden=""
  />
  <div
    aria-hidden="true"
  />
  <div
    style="position: absolute; z-index: 100000; max-height: -24px; left: 12px; bottom: 4px;"
  >
    <div
      style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
    >
      <button
        aria-label="Dismiss"
        id="react-aria-_r_c_"
        style="width: 1px; height: 1px;"
        tabindex="-1"
      />
    </div>
    <div
      class="rcx-box rcx-box--full rcx-tile--elevation-2 rcx-tile rcx-css-6qwf9c"
      data-testid="dropdown"
      style="bottom: 0px; left: 0px;"
    >
      <div
        class="rcx-box rcx-box--full rcx-css-xvdgy9"
      >
        <div
          aria-labelledby="react-aria-_r_a_"
          id="react-aria-_r_b_"
          role="menu"
          tabindex="0"
        >
          <div
            role="presentation"
          >
            <div
              class="rcx-option__title"
              id="react-aria-_r_d_"
              role="presentation"
            >
              Camera
            </div>
            <div
              aria-labelledby="react-aria-_r_d_"
              class="rcx-box rcx-box--full rcx-css-8q5c1d"
              role="group"
            >
              <label
                aria-checked="false"
                aria-disabled="false"
                aria-selected="false"
                class="rcx-option"
                data-key="facetime-videoinput"
                id="react-aria-_r_h_"
                role="menuitemradio"
                tabindex="-1"
              >
                <div
                  class="rcx-option__wrapper"
                >
                  <div
                    class="rcx-option__content"
                  >
                    <div
                      class="rcx-box rcx-box--full rcx-css-1qw20w4"
                      title="FaceTime HD Camera"
                    >
                      <span
                        class="rcx-box rcx-box--full rcx-css-1te28na"
                      >
                        FaceTime HD Camera
                      </span>
                    </div>
                  </div>
                  <div
                    class="rcx-option__input"
                  >
                    <label
                      class="rcx-box rcx-box--full rcx-radio-button"
                    >
                      <input
                        checked=""
                        class="rcx-box rcx-box--full rcx-radio-button__input"
                        type="radio"
                      />
                      <i
                        aria-hidden="true"
                        class="rcx-box rcx-box--full rcx-radio-button__fake"
                      />
                    </label>
                  </div>
                </div>
              </label>
              <label
                aria-checked="false"
                aria-disabled="false"
                aria-selected="false"
                class="rcx-option"
                data-key="brio-videoinput"
                id="react-aria-_r_l_"
                role="menuitemradio"
                tabindex="-1"
              >
                <div
                  class="rcx-option__wrapper"
                >
                  <div
                    class="rcx-option__content"
                  >
                    <div
                      class="rcx-box rcx-box--full rcx-css-1qw20w4"
                      title="Logitech BRIO"
                    >
                      <span
                        class="rcx-box rcx-box--full rcx-css-1te28na"
                      >
                        Logitech BRIO
                      </span>
                    </div>
                  </div>
                  <div
                    class="rcx-option__input"
                  >
                    <label
                      class="rcx-box rcx-box--full rcx-radio-button"
                    >
                      <input
                        class="rcx-box rcx-box--full rcx-radio-button__input"
                        type="radio"
                      />
                      <i
                        aria-hidden="true"
                        class="rcx-box rcx-box--full rcx-radio-button__fake"
                      />
                    </label>
                  </div>
                </div>
              </label>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      style="display: contents;"
    />
    <div
      style="border: 0px; clip-path: inset(50%); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
    >
      <button
        aria-label="Dismiss"
        id="react-aria-_r_m_"
        style="width: 1px; height: 1px;"
        tabindex="-1"
      />
    </div>
  </div>
  <span
    aria-hidden="true"
    data-focus-scope-end="true"
    hidden=""
  />
</body>
`;

exports[`preflight stories renders PreflightDevices MicOnlyProvider without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-owlgau"
    >
      <div
        style="width: 640px;"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-pvdni0"
          style="grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-iyng0n"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Microphone: MacBook Pro Microphone"
              class="rcx-box rcx-box--full rcx-button--small rcx-button rcx-css-1avkjfy"
              id="react-aria-_r_n_"
              title="MacBook Pro Microphone"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-mic rcx-icon rcx-css-18jrq41"
                >
                  
                </i>
                <div
                  class="rcx-box rcx-box--full rcx-css-99nwg2"
                >
                  MacBook Pro Microphone
                </div>
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-18jrq41"
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-css-iyng0n"
          >
            <button
              aria-expanded="false"
              aria-haspopup="true"
              aria-label="Speaker: MacBook Pro Speakers"
              class="rcx-box rcx-box--full rcx-button--small rcx-button rcx-css-1avkjfy"
              id="react-aria-_r_p_"
              title="MacBook Pro Speakers"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-volume rcx-icon rcx-css-18jrq41"
                >
                  ⟦
                </i>
                <div
                  class="rcx-box rcx-box--full rcx-css-99nwg2"
                >
                  MacBook Pro Speakers
                </div>
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-18jrq41"
                >
                  
                </i>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`preflight stories renders PreflightDevices NoDevices without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-owlgau"
    >
      <div
        style="width: 640px;"
      >
        <div
          class="rcx-box rcx-box--full rcx-css-pvdni0"
          style="grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));"
        >
          <div
            class="rcx-box rcx-box--full rcx-css-iyng0n"
          >
            <button
              aria-label="Microphone"
              class="rcx-box rcx-box--full rcx-button--small rcx-button rcx-css-1avkjfy"
              disabled=""
              title="Microphone"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-mic rcx-icon rcx-css-18jrq41"
                >
                  
                </i>
                <div
                  class="rcx-box rcx-box--full rcx-css-99nwg2"
                >
                  Microphone
                </div>
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-18jrq41"
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-css-iyng0n"
          >
            <button
              aria-label="Speaker"
              class="rcx-box rcx-box--full rcx-button--small rcx-button rcx-css-1avkjfy"
              disabled=""
              title="Speaker"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-volume rcx-icon rcx-css-18jrq41"
                >
                  ⟦
                </i>
                <div
                  class="rcx-box rcx-box--full rcx-css-99nwg2"
                >
                  Speaker
                </div>
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-18jrq41"
                >
                  
                </i>
              </span>
            </button>
          </div>
          <div
            class="rcx-box rcx-box--full rcx-css-iyng0n"
          >
            <button
              aria-label="Camera"
              class="rcx-box rcx-box--full rcx-button--small rcx-button rcx-css-1avkjfy"
              disabled=""
              title="Camera"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-video rcx-icon rcx-css-18jrq41"
                >
                  ❲
                </i>
                <div
                  class="rcx-box rcx-box--full rcx-css-99nwg2"
                >
                  Camera
                </div>
                <i
                  aria-hidden="true"
                  class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-18jrq41"
                >
                  
                </i>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
